samples/_failures_safe/1761461010_094062_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3d6151b8.c: In function ‘main’:
./samples/SAFE/__tmp_3d6151b8.c:169:5: error: expected declaration or statement at end of input
  169 |     }
      |     ^
